--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,26 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.231.6/containers/go
 {
-  "dockerFile": "Dockerfile",
+	"name": "Go",
+	"build": {
+		"dockerfile": "Dockerfile",
+		"args": {
+			// Update the VARIANT arg to pick a version of Go: 1, 1.18, 1.17
+			// Append -bullseye or -buster to pin to an OS version.
+			// Use -bullseye variants on local arm64/Apple Silicon.
+			"VARIANT": "1.18-buster",
+			// Options
+			"NODE_VERSION": "lts/*"
+		}
+	},
+	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+
+	// Set *default* container specific settings.json values on container create.
+	"settings": {
+		"go.toolsManagement.checkForUpdates": "local",
+		"go.useLanguageServer": true,
+		"go.gopath": "/go"
+	},
   "extensions": [
     "chrmarti.regex",
     "DavidAnson.vscode-markdownlint",
@@ -39,16 +60,15 @@
     "vsls-contrib.gistfs",
     "wayou.vscode-todo-highlight"
   ],
-  "forwardPorts": [2222, 5901, 6080, 8001, 8014],
-  "hostRequirements": {
-    "cpus": 1,
-    "memory": "4gb",
-    "storage": "16gb"
-  },
-  "mounts": ["source=dind-var-lib-docker,target=/var/lib/docker,type=volume"],
-  "name": "Megabyte Labs Development Environment",
-  "postCreateCommand": "[ -f start.sh ] && (bash start.sh || true)",
-  "remoteUser": "megabyte",
-  "runArgs": ["--init", "--privileged", "--shm-size=1g"],
-  "settings": {}
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "go version",
+
+	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"remoteUser": "vscode",
+	"features": {
+	}
 }
