--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,12 +20,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $RELEASE_VERSION
-        release_name: Release $RELEASE_VERSION
-        body: |
-          Changes in this Release
-          - First Change
-          - Second Change
+        tag_name: ${{ env.RELEASE_VERSION }}
+        release_name: Release ${{ env.RELEASE_VERSION }}
         draft: false
         prerelease: false
 
@@ -35,5 +31,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
-        release_tag: $RELEASE_VERSION
+        release_tag: ${{ env.RELEASE_VERSION }}
         project_path: "./s3-agent"
