Disabled deadcode linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.46.2
 
     - name: Run golint
-      run: cd s3-agent && golangci-lint run
+      run: cd s3-agent && golangci-lint run -D deadcode
 
     - name: Run tests
       run: cd s3-agent && go test -race -vet=off
