--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
       run: cd s3-agent && golangci-lint run --fast
 
     - name: Run tests
-      run: cd s3-agent && go test -race -vet=off
+      run: cd s3-agent && make test
