feat(Tests): Add Pytest testsuite (#8)
* Dev ci update - Linting update

* CI Update for linting

* Disabled deadcode linting

* Linted a bit of the code

* Added Different linters for test purposes

* Reverted CI linting

* Began to work on tests

* Minimal change on pytest file

* feat(tests): add tests setup and teardown

* feat(tests): Fix tests teardown and setup methods

* refactor(tests): adapt fixtures

* fix(Makefile): avoid rclone re-dl

* refactor(tests): Add docker compose to handle minio and bucket creation

* feat(CI): Add test to docker CI

* fix(template): fix PR template

* fix(config_model): json tag

* fix(CI)[WIP]: Add setup test env job

Co-authored-by: Umanoides <65120375+Umanoides@users.noreply.github.com>
Co-authored-by: Philippe AYMARD <philippe.aymard@epita.fr>

--- a/s3-agent/Makefile
+++ b/s3-agent/Makefile
@@ -1,7 +1,14 @@
+#####################################################################
+############################# VARIABLES #############################
+#####################################################################
 
 RCLONE_VERSION=v1.58.1
 RCLONE_ARCH=linux-amd64
 RCLONE_ARCHIVE=rclone-${RCLONE_VERSION}-${RCLONE_ARCH}
+
+#####################################################################
+############################### RULES ###############################
+#####################################################################
 
 all: build
 
@@ -17,5 +24,10 @@ build: rclone
 run: rclone
 	go run .
 
+test: build
+	pytest tests/
+
 clean:
-	rm -f s3-agent rclone
+	rm -rf s3-agent rclone tests/__pycache__ .pytest_cache
+
+.PHONY: all build run test clean
