--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,11 @@ jobs:
       with:
         go-version: 1.18
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.8
+
     - name: Verify dependencies
       run: cd s3-agent && go mod verify
 
@@ -29,10 +34,15 @@ jobs:
       run: cd s3-agent && go vet
 
     - name: Install golint
-      run: go install golang.org/x/lint/golint@latest
+      run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.46.2
 
     - name: Run golint
-      run: cd s3-agent && golint
+      run: cd s3-agent && golangci-lint run --fast
+
+    - name: Set up test env
+      uses: BSFishy/pip-action@v1
+      with:
+        requirements: s3-agent/tests/requirements.txt
 
     - name: Run tests
-      run: cd s3-agent && go test -race -vet=off
+      run: cd s3-agent && make test
