--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
         requirements: s3-agent/tests/requirements.txt
 
     - name: Run tests
-      run: cd s3-agent && export CI=true && make test
+      run: cd s3-agent && make test
