--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Release Go binary
       uses: wangyoucao577/go-release-action@v1.29
       with:
+        pre_command: cd s3-agent && apt-get update -y && apt-get upgrade -y && apt-get install unzip && make rclone && cd ..
         github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: linux
         goarch: amd64
