fix release github action
Signed-off-by: Eliott Bouhana <eliott.bouhana@epita.fr>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,4 @@ jobs:
         goarch: amd64
         release_tag: ${{ env.RELEASE_VERSION }}
         project_path: "./s3-agent"
+        binary_name: "s3-agent"
