fix(tests): fix importer on multiple level folder + add test
Signed-off-by: Alexandre Rulleau <rulleaualexandre@gmail.com>

--- a/s3-agent/Makefile
+++ b/s3-agent/Makefile
@@ -25,7 +25,7 @@ run: rclone
 	go run .
 
 test: build
-	pytest tests/
+	pytest tests/ -k '$(expr)'
 
 clean:
 	rm -rf s3-agent rclone tests/__pycache__ .pytest_cache
